# zrive-ds-4q23-churn

./: .gitignore  Makefile  README.md  pyproject.toml
config/: example_credentials.json
src/: bigquery_service.py  column_config.py  data_cleaning.py  data_gathering.py  evaluation.py  feature_computation.py  main.py  modeling.py  params.ini  predict.py
src/db_connectors/: bigquery_service.py
src/eda/: evaluation_metrics.ipynb  explore_data.ipynb  explore_data.md  explore_fine-tuning.ipynb  explore_lightgbm.ipynb  explore_lightgbm.md  feature_importance_shap.ipynb  first_model.ipynb  target_train.ipynb  target_train.md
src/models/: model.lgb
src/predictions/: predictions.parquet
src/utils/: logger.py
tests/: test_data_gathering.py  test_feature_computation.py
